--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,7 +14,7 @@ dependencies {
     compile 'se.emilsjolander:sprinkles:1.3.0'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.mcxiaoke.volley:library:1.0.6'
-
+    compile 'com.crittercism:crittercism-android-agent:+'
     compile project(':CompPreferenceFragment')
 }
 
